# minicast

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-minimal.txt  requirements.txt  server.py  setup.py  simple_server.py  transcode.py
docs/: API.md
examples/: advanced_usage.py  basic_usage.py
gifs/: README.md
minicast/: __init__.py  server.py  transcoder.py
tests/: __init__.py  test_server.py  test_transcoder.py
